# appstrument

./: appstrument.code-workspace
Appstrument/: build.gradle  settings.gradle
Appstrument/app/: build.gradle  proguard-rules.pro
Appstrument/gradle/wrapper/: gradle-wrapper.properties
android/: build.gradle  buildPatch.sh
android/app/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
appstrument-client/: .platform-version
appstrument-client/android/app/: build.gradle
appstrument-client/ios/Runner/: Info.plist
appstrument-client/ios/Runner.xcodeproj/: project.pbxproj
appstrument-client/lib/: main.dart
appstrument-client/lib/views/: class_view.dart  home.dart  logcat_view.dart  patch.dart  process_view.dart  slat_view.dart
appstrument-client/windows/: CMakeLists.txt
appstrument-client/windows/runner/: main.cpp
appstrument-common/: build.bat
appstrument-server-native/: Cargo.toml  build.rs
appstrument-server-native/src/: java.rs  lib.rs
appstrument-server-native/src/slat/: interpreter.rs  syntax.pest
client/: .gitignore  README.md  pubspec.yaml
client/lib/: app_state.dart  page_root.dart  util.dart  websocket.dart
client/lib/views/: class_view.dart  connect.dart  home.dart  logcat_view.dart  patch.dart
client/web/: index.html  manifest.json
client/windows/runner/: Runner.rc
common/: appstrument.proto  build.bat  build.sh  data_model.proto
libappstrument/: build.rs
libappstrument/src/: java.rs  lib.rs
libappstrument/src/slat/: ast.rs  mod.rs  parser.rs
libappstrument/src/test/: jvm.rs
(+24 files in other folders)
