[package]
name = "appstrument"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
jni = "0.19"
pest = "2.3"
pest_derive = "2.3"
lazy_static = "1.4"
anyhow = "1.0"
thiserror = "1.0"

[build-dependencies]
prost-build = "0.11"

[lib]
name = "appstrument"
crate_type = ["staticlib", "dylib"]
